k3d-victoriametrics/alertmanager/altermanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: webinternal
  name: vmalertmanager
  namespace: monitor-system
spec:
  rules:
  - host: alertmanager.example.com
    http:
      paths:
      - backend:
          service:
            name: vmalertmanager-alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
